Fixed overflow issues

--- a/css/style.css
+++ b/css/style.css
@@ -39,6 +39,7 @@ row {
   background-color: #333 !important;
   border-color: #FFFFFF;
   color: #fff;
+  overflow-x: auto;
 }
 .list-group-item:hover{
   color: #979797;
@@ -74,7 +75,8 @@ row {
     animation-name: modalopen;
     animation-duration: 1s;
     max-width: 400px;
-    overflow-x: hidden;
+    word-wrap: break-word;
+    overflow-x: auto;
     overflow-y: auto;
   }
   
